<resources>
    <string name="app_name">Paw</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_message">Please sign in to continue</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up_message">Please fill in below</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_question">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up_question">Already have an account?</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="imageview">ImageView</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="vet_name">Vet Name</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="dashboard">Dashboard</string>
    <string name="article">Article</string>
    <string name="vet">Vet</string>
    <string name="pet_food">Pet Food</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_vet">Search Vet</string>
    <string name="full_name_profile">Full Name</string>
    <string name="email_profile">Email</string>
    <string name="account">Account</string>
    <string name="imagebutton">imageButton</string>
    <string name="sign_out">Sign Out</string>
</resources>