<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSecondOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:contentDescription="@string/imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/second_on_boarding" />

    <TextView
        android:id="@+id/tvTitleSecondOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black32"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivSecondOnBoarding"
        app:layout_constraintStart_toStartOf="@+id/ivSecondOnBoarding"
        app:layout_constraintTop_toBottomOf="@+id/ivSecondOnBoarding" />

    <TextView
        android:id="@+id/tvFirstOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dummy_text"
        android:textAlignment="center"
        android:textColor="@color/black50"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleSecondOnBoarding"
        app:layout_constraintStart_toStartOf="@+id/tvTitleSecondOnBoarding"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSecondOnBoarding" />


</androidx.constraintlayout.widget.ConstraintLayout>