<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_155dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_20dp"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginEnd="@dimen/_20dp"
    android:layout_marginBottom="@dimen/_10dp"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivFoodItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120dp"
            android:contentDescription="@string/imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitleFoodItem"
            style="@style/TextStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black32"
            app:layout_constraintEnd_toEndOf="@id/ivFoodItem"
            app:layout_constraintStart_toStartOf="@id/ivFoodItem"
            app:layout_constraintTop_toBottomOf="@id/ivFoodItem" />

        <TextView
            android:id="@+id/tvBrandFoodItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/brand"
            android:textAlignment="center"
            android:textColor="@color/black50"
            android:textSize="@dimen/_12sp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleFoodItem"
            app:layout_constraintStart_toStartOf="@id/tvTitleFoodItem"
            app:layout_constraintTop_toBottomOf="@id/tvTitleFoodItem" />

        <TextView
            android:id="@+id/tvPriceFoodItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/black32"
            android:textSize="@dimen/_12sp"
            app:layout_constraintEnd_toEndOf="@id/tvBrandFoodItem"
            app:layout_constraintStart_toStartOf="@id/tvBrandFoodItem"
            app:layout_constraintTop_toBottomOf="@id/tvBrandFoodItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>