<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".view.activity.auth.SignInActivity">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignInMessage"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_message"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvSignIn"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailSignInLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInMessage"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordSignInLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignInLayout"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/TextStyleBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPasswordSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvForgotPasswordSignIn"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvSignInQuestion"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/tvSignInQuestion"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:text="@string/sign_in_question"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUpSignIn"
        style="@style/TextStyleSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/sign_up"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/tvSignInQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvSignInQuestion"
        app:layout_constraintTop_toTopOf="@+id/tvSignInQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>