<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignUpMessage"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_message"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFullNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpMessage"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"

            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailSignUpLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullNameLayout"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordSignUpLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUpLayout"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPasswordSignUpLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_15dp"
        app:boxCornerRadiusTopStart="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignUpLayout"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/TextStyleBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_30dp"
        android:background="@drawable/background_button"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUpQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUpQuestion"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:text="@string/sign_up_question"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignInSignUp"
        style="@style/TextStyleSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/tvSignUpQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvSignUpQuestion"
        app:layout_constraintTop_toTopOf="@+id/tvSignUpQuestion" />


</androidx.constraintlayout.widget.ConstraintLayout>